fixed alignment for new time

--- a/src/themes/StandardTheme/StandardTheme.css
+++ b/src/themes/StandardTheme/StandardTheme.css
@@ -34,7 +34,7 @@ p {
 
 .grid {
     display: grid;
-    grid-template-columns: 6.5% 58.5% 6% 6% 14% 9%;
+    grid-template-columns: 6.5% 58% 6.5% 6% 14% 9%;
     color: var(--secondary-fg);
     font-size: 1.25em;
 }
